// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDashboardFilter changes filter value 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{"networkNodes":[[{"type":"zone","name":"venue1"}]],"switchNodes":[[{"type":"switchGroup","name":"venue1"}]]}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter gets initial value from search parameters 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{"networkNodes":[[{"type":"zone","name":"venue1"}],[{"type":"zone","name":"venue2"}]],"switchNodes":[[{"type":"switchGroup","name":"venue1"}],[{"type":"switchGroup","name":"venue2"}]]}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter set empty array when path is empty 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter should render correctly 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{}}
  </div>
</DocumentFragment>
`;
